# admin-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  uwsgi.ini
.deploy/nginx/: Dockerfile
.github/workflows/: pylint.yaml
app/: admin.py  apps.py  models.py  tests.py  urls.py
app/api/: endpoints.py  urls.py
app/api/doc/: doc_endpoints.py  doc_urls.py
app/api/import_csv/: import_csv_actions.py  import_csv_serializers.py  import_csv_views.py
app/api/owner/: owner_serializers.py  owner_tests.py  owner_viewsets.py
app/api/pet/: pet_serializers.py  pet_tests.py  pet_viewsets.py
red_mascotera/: asgi.py  settings.py  urls.py  wsgi.py
